[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sceens/ShipBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sceens/Weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/units/Military/HiveSwarmShip.gd" type="Script" id=3]
[ext_resource path="res://Sceens/drone_mk1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sceens/trusters.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sceens/Bullet.tscn" type="PackedScene" id=6]


[node name="enemy" groups=[
"hive",
] instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 3 )

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.41286e-07, 0, 2.20399 )

[node name="RayCast" type="RayCast" parent="." index="1"]
enabled = true

[node name="NavRight" type="RayCast" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 250 )

[node name="NavLeft" type="RayCast" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 250 )

[node name="NavUp" type="RayCast" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0 )
enabled = true
cast_to = Vector3( 0, 0, 250 )

[node name="NavDown" type="RayCast" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )
enabled = true
cast_to = Vector3( 0, 0, 250 )

[node name="targeting" type="RayCast" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.58794e-06, 0.371846, 11.0113 )
enabled = true
cast_to = Vector3( 0, 0, 100000 )

[node name="ShootTimer" type="Timer" parent="." index="7"]
autostart = true

[node name="Weapon" parent="." index="8" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.59647 )
bulit = ExtResource( 6 )

[node name="drone_mk1" parent="." index="9" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-06, 0, 10, 0, 10, 0, -10, 0, -1.62921e-06, 0.0678025, -0.0290079, -0.215716 )

[node name="Spatial" parent="." index="10" instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 7.91645e-07, 0, -2.92955 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
